--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     restart: always
     build:
       context: '../'
-      dockerfile: 'docker/web/prod/Dockerfile'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_web
+    command: /home/django/web_start.sh
     ports:
       - 8000:8000
     env_file:
@@ -54,7 +55,7 @@ services:
   medna_metadata_celeryworker:
     build:
       context: '../'
-      dockerfile: 'docker/web/prod/Dockerfile'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_celeryworker
     command: /home/django/celeryworker_start.sh
     env_file:
@@ -71,7 +72,7 @@ services:
   medna_metadata_celerybeat:
     build:
       context: '../'
-      dockerfile: 'docker/web/prod/Dockerfile'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_celerybeat
     command: /home/django/celerybeat_start.sh
     env_file:
