modified docker-compose.prod.yml to build new image

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -6,7 +6,9 @@ services:
  # ----------------------------------------
   medna_metadata_web:
     restart: always
-    image: mkimble88/medna-metadata:latest
+    build:
+      context: '../'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_web
     command: /home/django/web_start.sh
     ports:
@@ -52,7 +54,9 @@ services:
  # ----------------------------------------
   medna_metadata_celeryworker:
     restart: always
-    image: mkimble88/medna-metadata:latest
+    build:
+      context: '../'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_celeryworker
     command: /home/django/celeryworker_start.sh
     env_file:
@@ -68,7 +72,9 @@ services:
  # ----------------------------------------
   medna_metadata_celerybeat:
     restart: always
-    image: mkimble88/medna-metadata:latest
+    build:
+      context: '../'
+      dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_celerybeat
     command: /home/django/celerybeat_start.sh
     env_file:
@@ -85,7 +91,7 @@ services:
  # ----------------------------------------
   nginx:
     restart: always
-    image: mkimble88/medna-metadata-nginx:latest
+    build: nginx
     container_name: nginx
     ports:
       - 80:8080
