--- a/.gitignore
+++ b/.gitignore
@@ -148,10 +148,4 @@ docker/medna.env.db
 docker/nginx.proxycompanion.env
 docker/gunicorn.env
 
-docker-ignore/bashrc
-docker-ignore/profile
-docker-ignore/medna.env
-docker-ignore/medna.env.db
-docker-ignore/nginx.proxycompanion.env
-docker-ignore/gunicorn.env
-docker-ignore/
+docker-ignore/*
